tools/lintrunner/tests/snapshots/integration_test__duplicate_code_fails.snap
---
source: tests/integration_test.rs
expression: output_lines
---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Invalid linter configuration: linter 'DUPE' is defined multiple times."
