tools/lintrunner/tests/snapshots/integration_test__git_no_changes.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- ">>> General linter failure:"
- ""
- "  Error (TESTLINTER) Linter failed"
- "    Linter failed. This a bug, please file an issue against the linter"
- "    maintainer."
- "    "
- "    CONTEXT:"
- "    Failed to execute linter command wont_be_run with args: []"
- ""
- ""
- "STDERR:"
- "[2021-11-15T22:37:14Z DEBUG lintrunner::lint_config] Found linters: {\"TESTLINTER\"}"
- "[2021-11-15T22:37:14Z DEBUG lintrunner] Running linters: [\"TESTLINTER\"]"
- "[2021-11-15T22:37:14Z DEBUG lintrunner::git] Linting commit diff files: {}"
- "[2021-11-15T22:37:14Z DEBUG lintrunner::git] Linting working tree diff files: {\"README.md\"}"
- "[2021-11-15T22:37:14Z DEBUG lintrunner] Linting files: ["
- "        AbsPath {"
- "            inner: \"/tmp/.tmp85SiQW/README.md\","
- "        },"
- "    ]"
- "[2021-11-15T22:37:14Z DEBUG lintrunner::linter] Linter 'TESTLINTER' matched files: ["
- "        AbsPath {"
- "            inner: \"/tmp/.tmp85SiQW/README.md\","
- "        },"
- "    ]"
- "[2021-11-15T22:37:14Z DEBUG lintrunner::linter] Running linter TESTLINTER: wont_be_run "
