tools/lintrunner/tests/snapshots/integration_test__invalid_args.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error: The argument '--paths-cmd <paths-cmd>' cannot be used with 'paths'"
- ""
- "USAGE:"
- "    lintrunner --config <config> --paths-cmd <paths-cmd>"
- ""
- For more information try --help
